# OpSuite

./: .gitignore  LICENSE  README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml
init/: wait-for-pg.sh
init/pg-init-scripts/: create-multiple-posgresql-databases.sh
opsuite/: __init__.py  frontend.py  logging.py  logs.py  server.py  settings.env  settings.py
opsuite-frontend/: .env.production  README.md  dockerfile  package-lock.json  package.json  vue.config.js
opsuite-frontend/public/: index.html
opsuite-frontend/src/: App.vue
opsuite-frontend/src/components/: AppNav.vue
opsuite-frontend/src/plugins/: axios.js  vuetify.js
opsuite-frontend/src/router/: index.js
opsuite-frontend/src/store/: index.js
opsuite-frontend/src/store/modules/: afish.js
opsuite-frontend/src/views/afish/: AddJobForm.vue  Executions.vue  Jobs.vue
opsuite/api/: __init__.py
opsuite/modules/: __init__.py
opsuite/modules/afish/: __init__.py
opsuite/modules/afish/api/: __init__.py  executions.py  jobclasses.py  jobs.py
opsuite/modules/afish/core/db/: database.py  models.py
opsuite/modules/afish/core/jobs/: __init__.py  _base.py  azure.py
opsuite/modules/afish/models/: jobs.py
opsuite/opsuite-frontend/: .env.production  package-lock.json  package.json  vue.config.js
opsuite/opsuite-frontend/src/: App.vue
opsuite/opsuite-frontend/src/components/: AppNav.vue
opsuite/opsuite-frontend/src/plugins/: axios.js  vuetify.js
opsuite/opsuite-frontend/src/router/: index.js
opsuite/opsuite-frontend/src/store/: index.js
(+5 files in other folders)
