[tool.poetry]
name = "opsuite"
version = "0.1.0"
description = ""
authors = ["Leron Gray <daddycocoaman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = "^0.11.5"
python-dotenv = "^0.14.0"
loguru = "^0.5.1"
aiofiles = "^0.5.0"
email_validator = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.1.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
